# DDD-project

./: INTEGRATION.md  README.md
backend/: lifespan.py  main.py  pyproject.toml
backend/app/: .env  consts.py  settings.py
backend/app/api/chat/: dependencies.py  handlers.py  schemas.py
backend/app/application/: init.py
backend/app/application/commands/: base.py  commands.py  handlers.py
backend/app/application/events/: base.py  events.py  handlers.py
backend/app/application/mediator/: base.py  command.py  event.py  query.py
backend/app/application/queries/: base.py  handlers.py  queries.py
backend/app/domain/entities/: app_entities.py  base.py
backend/app/domain/exceptions/: base.py  chat.py  text.py
backend/app/domain/value_objects/: app_values.py  base.py
backend/app/infra/broker/: base.py  converters.py  kafka.py
backend/app/infra/repositories/: base.py  converterts.py  memory.py  mongodb.py
backend/docker/: .dockerignore  Dockerfile  docker-compose.yml
frontend/: README.md  package-lock.json  package.json  start.bat  start.sh
frontend/public/: index.html
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/components/: ChatList.tsx  ChatView.tsx  CreateChat.tsx  MessageInput.tsx  MessageList.tsx
frontend/src/types/: api.ts
